--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -13,6 +13,7 @@
             <!-- userName이 존재하지 않을 경우 -->
             {{^userName}}
                 <a href="/oauth2/authorization/google" class="btn btn-success active" role="button">Google Login</a>
+                <a href="/oauth2/authorization/naver" class="btn btn-success secondary active" role="button">Naver Login</a>
             {{/userName}}
         </div>
     </div>
